fix screen overflow problem

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -9,24 +9,25 @@ html {
 }
 
 body {
-  margin: 0;
+  position: relative;
   width: 100%;
   height: 100vh;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
+    'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
 
 div#root {
   width: 100%;
   height: 100%;
+  position: absolute;
+  overflow: hidden;
 }
 
 .page {
@@ -102,8 +103,7 @@ footer > nav {
   cursor: pointer;
 }
 
-.next,
-.back {
+.stack {
   width: 100%;
   height: 100%;
 }
